# ResearchIntelligence

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/workflows/: ci.yml  release.yml  sync.yml
app/analytics/: clustering.py  collab_network.py  corpus_cluster.py  corpus_gaps.py  digest.py  network.py  trends.py
app/cli/: main.py
app/connectors/: acl.py  arxiv.py  openalex.py  semantic_scholar.py
app/core/: bibtex.py  config.py  db.py  models.py  service.py
app/gpu/: __init__.py  embedder.py  llm.py
app/graph/: citations.py
app/indexing/: chunker.py  engine.py
app/pipelines/: auto_accept.py  backup.py  corpus_embed.py  corpus_ingest.py  corpus_personalize.py  corpus_report.py  corpus_tags.py  dedup.py  downloader.py  enricher.py  exporter.py  sync.py  (+6 more)
configs/: config.yaml  note_template.md
scripts/: download_nlp2026_pdfs.py  import_nlp2026.py
tests/: conftest.py  test_analytics.py  test_auto_accept.py  test_backup.py  test_benchmark.py  test_chunks.py  test_citations_metadata.py  test_clustering.py  test_corpus_cluster.py  test_corpus_embed.py  test_corpus_gaps.py  test_corpus_ingest.py  test_corpus_personalize.py  test_corpus_report.py  test_corpus_tags.py  test_dedup.py  test_digest.py  test_download.py  test_enrich.py  test_export.py  test_import.py  test_inbox_recommend.py  test_incremental_index.py  test_network.py  test_notes_workflow.py  test_references.py  test_sync.py  test_tags.py  test_watch.py
(+16 files in other folders)
